--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -77,7 +77,7 @@ button:hover {
 
 #nextTaskText {
     position: absolute;
-    top: 5%;
-    right: 5%;
+    top: 7%;
+    left: 5%;
     text-align: right;
 }
