--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -81,3 +81,15 @@ button:hover {
     left: 5%;
     text-align: right;
 }
+
+#focusMode {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+}
+
+#tasksMode {
+    position: absolute;
+    top: 40%;
+    left: 60%;
+}
