--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -10,48 +10,88 @@
 </head>
 
 <body>
-    <p id="OpeningText" hidden>Hi! Welcome to FocusBloom. Now organize your life dummy!</p>
+    <!-- MENU BUTTONS --------------------------------------------------------->
 
-    <div id="events"></div>
+    <h1 style="position: absolute; top: 30%; left: 50%; 
+    text-align: center; transform: translate(-50%, -50%);" id="welcomeTitle">
+        Welcome to FocusBloom!</h1>
+    <button id="focusMode">FOCUS</button>
+    <button id="tasksMode">TASKS</button>
 
-    <h3 id="nextTaskHeader" hidden>Next Task:</h3>
-    <h3 id="nextTaskText" hidden>Review key concepts for biology midterm</h3>
+    <!-- FOCUS MODE ----------------------------------------------------------->
 
-    <div id="normalScreen" hidden>
-        <h1 id="currentTaskHeader">Current Task:</h1>
-        <h1 id="currentTaskText">Peer edit Fred's SOSC essay</h1>
+    <div id="focusModeScreen" hidden style="opacity: 0;">
+        <h3 id="nextTaskHeader">Next Task:</h3>
+        <h3 id="nextTaskText">Review key concepts for biology midterm</h3>
 
-        <p id="nextCheckInText">Next Check-In: 30 minutes (seconds)</p>
+        <div id="normalScreen">
+            <h1 id="currentTaskHeader">Current Task:</h1>
+            <h1 id="currentTaskText">Peer edit Fred's SOSC essay</h1>
+
+            <p id="nextCheckInText">Next Check-In: 30 minutes (seconds)</p>
+        </div>
+
+        <h2 class="checkIn" id="checkInText">Would you like to continue working on your task?</h2>
+
+        <button id="greenButton" onclick="finishTask()">Finish task</button>
+        <button id="redButton" onclick="skipTask()">Skip task</button>
+
+        <button onclick="scheduleTask('Math Homework', 120, '2025-03-06')">Schedule Task</button>
+        <button onclick="listEvents()">List Events</button>
+        <button onclick="fetchEvents()">Fetch Events</button>
+        <button onclick="checkScheduleConflict('2025-03-05 10:30:00', '2025-03-05 15:30:00')">Check Conflict</button>
+        <button onclick="rescheduleBreak(30)">Reschedule Break</button>
     </div>
 
-    <h2 class="checkIn" id="checkInText" hidden>Would you like to continue working on your task?</h2>
+    <!-- TASKS MODE ----------------------------------------------------------->
 
-    <button id="greenButton" onclick="finishTask()" hidden>Finish task</button>
-    <button id="redButton" onclick="skipTask()" hidden>Skip task</button>
+    <div id="tasksModeScreen" hidden style="opacity: 0;">
+        <div class="container" id="taskTableDiv">
+            <h1>Tasks:</h1>
 
-    <button onclick="loadCalendarEvents()" hidden>Load Calendar Events</button>
+            <table id="taskTable" border="1">
+                <thead>
+                    <tr>
+                        <th>Task</th>
+                        <th>Due Date</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody id="taskTableBody">
+                    <!-- Table rows will be populated dynamically -->
+                </tbody>
+            </table>
 
-    <button id="focusMode" onclick="focusModeActivate()" hidden>FOCUS</button>
-    <button id="tasksMode" onclick="tasksModeActivate()" hidden>TASKS</button>
+            <button onclick="loadCalendarEvents()" hidden>Load Calendar Events</button>
 
-    <div id="taskModeScreen">
-        <h1 id="currentTaskHeader">Tasks:</h1>
+            <div id="events"></div>
+        </div>
 
-        <table id="taskTable" border="1">
-            <thead>
-                <tr>
-                    <th>Task</th>
-                    <th>Due Date</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody id="taskTableBody">
-                <!-- Table rows will be populated dynamically -->
-            </tbody>
-        </table>
+        <div class="container" id="createTaskDiv">
+            <h1>Create new task:</h1>
+
+            <form>
+                <label for="title">Task Title:</label><br>
+                <input type="text" id="title" name="title"><br>
+                <label for="lname">Start Time:</label><br>
+                <input type="text" id="lname" name="lname">
+            </form>
+        </div>
+
     </div>
+
+    <!-- SCRIPTS -------------------------------------------------------------->
 
     <script src="/static/script.js"></script>
+    <script src="/static/animations.js"></script>
+    <script src="/static/loadBackend.js"></script>
+
+    <script>
+        window.onload = (event) => {
+            loadTasks();
+        };
+    </script>
+
 </body>
 
 </html>
