--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -62,6 +62,13 @@ button:hover {
 
 .tabs {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: flex-start; /* Align tab buttons to the left */
+    width: 100%;
+}
+
+.tab-button {
+    margin-right: 10px;
 }
 
 .tab-button.active {
@@ -144,4 +151,28 @@ button:hover {
     right: 10%;
     width: 25%;
     height: 50%;
+}
+
+#priority {
+    width: 100%;
+    height: 7px;
+    border-radius: 7px;
+    border: 1px solid #5d544b;
+    accent-color: rgba(255, 255, 255, 0);
+    -webkit-appearance: none;
+    appearance: none;
+    background: linear-gradient(to right, red, blue);
+}
+
+#editTasks {
+    margin-left: auto;  /* Pushes the Edit Tasks button to the right */
+    margin-top: 10px;
+}
+
+#timePromptWarning {
+    color: red;
+}
+
+#createTaskWarning {
+    color: red;
 }
