--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -42,13 +42,13 @@
 
         <div id="mainFocusMode" hidden>
             <h3 id="nextTaskHeader">Next Task:</h3>
-            <h3 id="nextTaskText">Review key concepts for biology midterm</h3>
+            <h3 id="nextTaskText"></h3>
 
             <div id="normalScreen">
                 <h1 id="currentTaskHeader">Current Task:</h1>
-                <h1 id="currentTaskText">Peer edit Fred's SOSC essay</h1>
+                <h1 id="currentTaskText"></h1>
 
-                <p id="nextCheckInText">Next Check-In: 30 minutes (seconds)</p>
+                <p id="nextCheckInText">Next Check-In: __</p>
             </div>
 
             <h2 class="checkIn" id="checkInText">Would you like to continue working on your task?</h2>
@@ -56,12 +56,12 @@
             <button id="greenButton" onclick="finishTask()">Finish task</button>
             <button id="redButton" onclick="skipTask()">Skip task</button>
 
-            <button onclick="scheduleTask('Math Homework', 120, '2025-03-06')">Schedule Task</button>
+            <!-- <button onclick="scheduleTask('Math Homework', 120, '2025-03-06')">Schedule Task</button>
             <button onclick="listEvents()">List Events</button>
             <button onclick="fetchEvents()">Fetch Events</button>
             <button onclick="checkScheduleConflict('2025-03-05 10:30:00', '2025-03-05 15:30:00')">Check
                 Conflict</button>
-            <button onclick="rescheduleBreak(30)">Reschedule Break</button>
+            <button onclick="rescheduleBreak(30)">Reschedule Break</button> -->
         </div>
     </div>
 
@@ -161,6 +161,7 @@
 
     <!-- SCRIPTS -------------------------------------------------------------->
 
+    <script type="module" src="/static/confetti.js"></script>
     <script src="/static/script.js"></script>
     <script src="/static/animations.js"></script>
     <script src="/static/loadBackend.js"></script>
